# made-cpp-homeworks-fall-21

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
homework1/: CMakeLists.txt  description.md  main.c
homework1/exchange_lib/: CMakeLists.txt  exchange.c  exchange.h  in_out_helpers.c  in_out_helpers.h
homework1/linters/: run.sh
homework1/tests/: CMakeLists.txt  test_exchange.cpp
